--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,116 @@
-h1,
 p,
-.active,
 span,
 legend,
 fieldset {
   color: rgb(255, 255, 255);
-}
-body {
-  background-color: rgb(156, 156, 156);
+  font-size: larger;
 }
 
+body {
+  background-color: rgb(198, 198, 198);
+}
+.active {
+  color: rgb(0, 13, 255);
+}
+
+/* ---------------NAVIGATION------------ */
+header nav {
+  background-color: rgba(0, 0, 0, 0.167);
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+header nav ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-evenly;
+  align-items: center;
+}
+header nav ul a {
+  font-size: larger;
+  text-decoration: none;
+  color: white;
+}
+header nav img {
+  margin: 0;
+  margin: auto;
+  width: 3.5em;
+}
+/* -----------MAIN----------- */
+main {
+  margin-top: 6em;
+}
+h1 {
+  text-align: center;
+}
+.confirmations_envoie {
+  color: rgb(38, 232, 24);
+  text-align: center;
+  font-size: larger;
+  font-weight: 900;
+}
+/* -----------FORM----------- */
 input {
   margin: 0.5em;
 }
 .erreur {
   color: red;
+  font-weight: 600;
 }
-/* 
+#formulaire {
+  display: flex;
+  flex-direction: column;
+  width: 20em;
+  margin: auto;
+  border: solid rgb(0, 255, 251) 6px;
+  border-radius: 10px;
+  text-align: center;
+}
 
-.active
-{
-    color: rgb(60, 255, 0);
+#formulaire input {
+  width: 18em;
 }
- */
-main#formconnexion {
+#formulaire h3 {
+  border-top: solid rgb(0, 255, 251) 6px;
+  padding-top: 1em;
+}
+input[type="submit"] {
+  width: 10em;
+  background-color: rgb(0, 255, 251);
+  border-radius: 10px;
+  margin-bottom: 1em;
+}
+#formulaire input,
+#formulaire label,
+#formulaire p {
+  margin: auto;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+textarea {
+  width: 18em;
+  resize: none;
   margin: auto;
 }
-main#formconnexion p {
+#nouvinscrit,
+#nouvinscrit a,
+#pasinscrit,
+#pasinscrit a {
   text-align: center;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* ---------------FOOTER--------------  */
+footer {
+  margin-top: 2.5em;
+  text-align: center;
+  background-color: black;
+  padding: 1.3em;
+}
+footer a,
+footer a:hover {
+  color: white;
+  text-decoration: none;
 }
